static/css/main.css
* {
	margin: 0;
	padding: 0;
}

a { color: #688FE7; }
h1 { font-size: 26px;}
h2 { font-size: 12px;}
p, a { font-size: 12px; }
html, body#index {
	overflow: hidden;
}

#temp {
	color: #ff0000;
}

#header, #controls {
	font-family: arial;
}

#header {
	padding: 10px;
}
	
	#header h1 {
		font-weight: normal;
		color: #688FE7;
	}

	#header p {
		margin-top: 5px;
	}

#controls {
	padding: 10px;
	position: relative;
}
	#controls a {
		font-size: 16px;
	}

	#clear-calendar {
	}

	#pull-tab {
		position: absolute;
		right: 10px;
		color: #ccc;
	}

/*---------CALENDAR---------*/
#calendar {
	width: 50%;
	float: left;
}

.wc-header td {
	background: url(/static/img/shader.png) repeat-x;
}

.wc-cal-event:hover {
	cursor: pointer;
}

/* school iframe*/
iframe#school {
	overflow: auto;
	border: none;
	width: 50%;
	float: left;
}

